--- a/app/views/travels/show.html.erb
+++ b/app/views/travels/show.html.erb
@@ -1,4 +1,3 @@
-<%= @travel.title %>
-<%= @travel.travel_image %>
-<%= @travel.departured_at %>
-<%= @travel.returend_at %>
+<p><%= @travel.title %></p>
+<p><%= @travel.departured_at %></p>
+<p><%= @travel.returend_at %></p>
