--- a/app/views/travels/index.html.erb
+++ b/app/views/travels/index.html.erb
@@ -1,8 +1,14 @@
 ここはtravelのindexページ
 
 <% @travels.each do |t| %>
-  <%= t.title %>
-  <%= t.travel_image %>
-  <%= t.departured_at %>
-  <%= t.returend_at %>
+  <p><%= t.title %></p>
+  <% if t.travel_image.url.nil? %>
+    <p><%= image_tag 'blank.png' %></p>
+  <% else %>
+    <p><%= image_tag t.travel_image.url %></p>
+  <% end %>
+  <p><%= t.departured_at %></p>
+  <p><%= t.returend_at %></p>
 <% end %>
+
+<p><%= link_to "NEW", new_travel_path %></p>
