作業性向上のためビューを調整

--- a/app/views/travels/show.html.erb
+++ b/app/views/travels/show.html.erb
@@ -20,3 +20,9 @@
     <%= x.place %>
   </p>
 <% end %>
+
+<p><%= link_to "EDIT", edit_travel_path(@travel) %></p>
+
+<hr>
+<p>パーシャルへ分ける前のフッター</p>
+<p><%= link_to "SHOW", travel_path(@travel) %></p>
