--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,4 +1,5 @@
 <%= @user.name %>のマイページ
-<br>
+
+<hr>
 <p>パーシャルへ分ける前のフッター</p>
-  <li><%= link_to "Index", travels_path %></li>
+<p><%= link_to "Index", travels_path %></p>
