ビュー群をデバッグ

--- a/app/views/notes/_form.html.erb
+++ b/app/views/notes/_form.html.erb
@@ -25,7 +25,7 @@
 
   <% if action_name == 'edit' %>
     <%= f.submit "UPDATE" %>
-    <%= button_to "DELETE", note_path(@note), data: { confirm: "Are you sure?" }, method: :delete %>
+    <%= link_to "DELETE", note_path(@note), data: { confirm: "Are you sure?" }, method: :delete %>
   <% else %>
     <%= f.submit "CREATE" %>
   <% end %>
