--- a/app/views/travels/_form.html.erb
+++ b/app/views/travels/_form.html.erb
@@ -41,7 +41,7 @@
 
   <% if action_name == 'edit' %>
     <%= f.submit "UPDATE" %>
-    <%= button_to "DELETE", travel_path(@travel), data: { confirm: "Are you sure?" }, method: :delete %>
+    <%= link_to "DELETE", travel_path(@travel), data: { confirm: "Are you sure?" }, method: :delete %>
   <% else %>
     <%= f.submit "CREATE" %>
   <% end %>
