作業性向上のためビューを調整

--- a/app/views/cards/show.html.erb
+++ b/app/views/cards/show.html.erb
@@ -1,20 +1,16 @@
-<p>
-  <%= @card.sentence %>
-</p>
-<p>
-  <% @card.images.each_with_index do |x| %>
-    <% if x.present? %>
-      <%= image_tag(x.data.url) %>
-    <% else %>
-      <%= image_tag('transparent.png') %>
-    <% end %>
+<%= @card.sentence %><br>
+
+<% @card.images.each_with_index do |x| %>
+  <% if x.present? %>
+    <%= image_tag(x.data.url) %><br>
+  <% else %>
+    <%= image_tag('transparent.png') %><br>
   <% end %>
+<% end %>
+
+<p>
+  <%= link_to 'カード編集', edit_card_path(@card) %>
+  <%= link_to 'カード新規作成', new_card_path %>
 </p>
 
-<p><%= link_to "CARD EDIT", edit_card_path(@card) %></p>
-<p><%= link_to "CARD NEW", new_card_path %></p>
-
-<hr>
-<p>パーシャルへ分ける前のフッター</p>
-<p><%= link_to "SHOW", travel_path(@associated_travel) %></p>
-<p><%= link_to "NOTE INDEX", notes_path %></p>
+<%= render 'layouts/travels_footer' %>
