--- a/app/views/travels/index.html.erb
+++ b/app/views/travels/index.html.erb
@@ -1,14 +1,13 @@
 <% @travels.each do |t| %>
-  <p><%= t.title %></p>
   <% if t.travel_image.url.nil? %>
     <p><%= link_to image_tag('blank.png'), t %></p>
   <% else %>
     <p><%= link_to image_tag(t.travel_image.url), t %></p>
   <% end %>
-  <p><%= t.departured_at %></p>
-  <p><%= t.returend_at %></p>
+  <%= t.title %><br>
+  <%= t.departured_at %><br>
+  ~<%= t.returend_at %><br>
 <% end %>
 
 <hr>
-<p>パーシャルへ分ける前のフッター</p>
-<p><%= link_to "NEW", new_travel_path %></p>
+<%= link_to 'トラベル新規作成', new_travel_path %>
