--- a/app/views/notes/edit.html.erb
+++ b/app/views/notes/edit.html.erb
@@ -1,1 +1,16 @@
-<%= render 'form', note: @note %>
+<% if @note.errors.any? %>
+  <div id="note_error_area">
+    Creation failed due to <%= pluralize(@note.errors.count, "error") %>.<br>
+    <% @note.errors.full_messages.each do |m| %>
+      <li><%= m %></li>
+    <% end %>
+  </div>
+<% end %>
+
+<%= form_with(model: @note, local: true) do |f| %>
+  <p><%= f.label :"content" %><%= f.text_area :content %></p>
+  <p><%= f.label :"image" %><%= f.file_field :image %></p>
+  <p><%= f.label :"importance" %><%= f.check_box :importance, {}, true, false %></p>
+  <%= f.submit "UPDATE" %>
+  <%= link_to "DELETE", note_path(@note), data: { confirm: "Are you sure?" }, method: :delete %>
+<% end %>
