--- a/app/views/notes/_index_js.js.erb
+++ b/app/views/notes/_index_js.js.erb
@@ -1,5 +1,6 @@
 $("#notes_area").html("<%= j(render 'notes/index', { notes: @associated_travel.notes }) %>")
 $("textarea").val('')
 $("#note_image").val('')
+$("#note_remove_image").prop("checked", false)
 $("#note_importance").prop("checked", false)
 $("#note_error_area").remove()
