--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -4,7 +4,7 @@ Number of cards: <%= Card.where(travel_id: @user.travels.ids).count %><br>
 
 <% Card.where(travel_id: @user.travels.ids).includes(:images).each do |c| %>
   <% if c.images.present? %>
-    <%= link_to image_tag(c.images.first.data.url), c %><br>
+    <%= link_to image_tag(c.images.first.data.thumb.url), c %><br>
   <% else %>
     <%= link_to image_tag('blank.png'), c %><br>
   <% end %>
