--- a/app/views/layouts/_travels_footer.html.erb
+++ b/app/views/layouts/_travels_footer.html.erb
@@ -1,3 +1,4 @@
 <hr>
 <%= link_to 'トラベル詳細', travel_path(@associated_travel) %>
 <%= link_to 'メモ一覧', notes_path %>
+<%= link_to 'リスト一覧', lists_path %>
