--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -11,5 +11,4 @@ Number of cards: <%= Card.where(travel_id: @user.travels.ids).count %><br>
   <%= c.title %><br>
 <% end %>
 
-<hr>
-<%= link_to 'トラベル一覧', travels_path %>
+<%= render 'layouts/users_footer' %>
