--- a/app/views/lists/_new.html.erb
+++ b/app/views/lists/_new.html.erb
@@ -9,5 +9,20 @@
 
 <%= form_with(model: @list) do |f| %>
   <%= f.label :"title" %><%= f.text_field :title %><br>
+
+  <div id='add_item'>
+    <%= f.fields_for :items do |i| %>
+      <%= render 'item_fields', f: i %>
+    <% end %>
+  </div>
+
+  <%= link_to_add_association 'ADD ITEM', f, :items,
+    id: 'add_item_link',
+    data: {
+     association_insertion_node: '#add_item',
+     association_insertion_method: 'append'
+    }
+  %><br>
+
   <%= f.submit 'CREATE' %>
 <% end %>
