シードデータを作成

--- a/app/views/cards/show.html.erb
+++ b/app/views/cards/show.html.erb
@@ -4,7 +4,7 @@
   <% if x.present? %>
     <%= image_tag(x.data.url) %><br>
   <% else %>
-    <%= image_tag('transparent.png') %><br>
+    <%= image_tag('sample_card_image.png') %><br>
   <% end %>
 <% end %>
 
