--- a/app/views/layouts/_users_footer.html.erb
+++ b/app/views/layouts/_users_footer.html.erb
@@ -1,3 +1,4 @@
-<hr>
-<%= link_to 'トラベル一覧', travels_path %>
-<%= link_to '作成したリスト一覧', personal_lists_path %>
+<footer class="navbar fixed-bottom bg-dark" id="footer">
+  <%= link_to 'トラベル一覧', travels_path %>
+  <%= link_to '作成したリスト一覧', personal_lists_path %>
+</footer>
