--- a/app/views/users/registrations/edit.html.erb
+++ b/app/views/users/registrations/edit.html.erb
@@ -3,44 +3,54 @@
 <%= form_for(resource, as: resource_name, url: registration_path(resource_name), html: { method: :put }) do |f| %>
   <%= devise_error_messages! %>
 
-  <div class="field">
-    <%= f.label :name %><br />
-    <%= f.text_field :name, autofocus: true %>
+  <div class="form-group">
+    <%= f.label :'name' %>
+    <%= f.text_field :name,
+                     class: 'form-control'
+    %>
   </div>
 
-  <div class="field">
-    <%= f.label :email %><br />
-    <%= f.email_field :email, autocomplete: "email" %>
+  <div class="form-group">
+    <%= f.label :'email' %>
+    <%= f.email_field :email,
+                      autocomplete: "email",
+                      class: 'form-control'
+    %>
   </div>
 
   <% if devise_mapping.confirmable? && resource.pending_reconfirmation? %>
     <div>Currently waiting confirmation for: <%= resource.unconfirmed_email %></div>
   <% end %>
 
-  <div class="field">
-    <%= f.label :current_password %> <i>(we need your current password to confirm your changes)</i><br />
-    <%= f.password_field :current_password, autocomplete: "current-password" %>
+  <div class="form-group">
+    <%= f.label :'current password' %>
+    <%= f.password_field :current_password,
+                         placeholder: 'we need your current password to confirm your changes',
+                         autocomplete: "current-password",
+                         class: 'form-control'
+    %>
   </div>
 
-  <div class="field">
-    <%= f.label :password %> <i>(leave blank if you don't want to change it)</i><br />
-    <%= f.password_field :password, autocomplete: "new-password" %>
-    <% if @minimum_password_length %>
-      <br />
-      <em><%= @minimum_password_length %> characters minimum</em>
-    <% end %>
+  <div class="form-group">
+    <%= f.label :'new password' %>
+    <%= f.password_field :password,
+                         autocomplete: "new-password",
+                         placeholder: "#{@minimum_password_length} characters minimum, leave blank if you don't want to change it",
+                         class: 'form-control'
+    %>
   </div>
 
-  <div class="field">
-    <%= f.label :password_confirmation %><br />
-    <%= f.password_field :password_confirmation, autocomplete: "new-password" %>
+  <div class="form-group">
+    <%= f.password_field :password_confirmation,
+                         autocomplete: "new-password",
+                         placeholder: 'new password confirmation',
+                         class: 'form-control'
+    %>
   </div>
 
-  <div class="actions">
-    <%= f.submit "Update" %>
+  <div class="form-group">
+    <%= f.submit "Update", class: 'btn btn-primary' %>
   </div>
 <% end %>
 
-<h3>Cancel my account</h3>
-
-<p>Unhappy? <%= button_to "Cancel my account", registration_path(resource_name), data: { confirm: "Are you sure?" }, method: :delete %></p>
+<p>If you want to delete your account, please click <%= link_to 'here.', registration_path(resource_name), data: { confirm: "Are you sure?" }, method: :delete %> This operation can't be canceled.</p>
