--- a/app/views/users/top.html.erb
+++ b/app/views/users/top.html.erb
@@ -21,7 +21,7 @@
         <%= image_tag('key_image.png', class: 'key_image') %>
       </div>
       <div class="col-sm-4 message_box">
-        <p class="message_text">
+        <p class="text-justify">
           左にイメージ画像、ここにappの説明が入ります。以下はレイアウト確認用です。サンプルテキストサンプルテキストサンプルテキストサンプルテキストサンプルテキストサンプルテキストサンプルテキストサンプルテキストサンプルテキストサンプルテキストサンプルテキストサンプルテキストサンプルテキストサンプルテキストサンプルテキストサンプルテキストサンプルテキストサンプルテキストサンプルテキストサンプルテキスト
         </p>
         <p><%= link_to "Sign up", new_user_registration_path, class: 'btn btn-outline-light' %></p>
