--- a/app/views/layouts/_travels_footer.html.erb
+++ b/app/views/layouts/_travels_footer.html.erb
@@ -1,10 +1,14 @@
 <footer class="navbar fixed-bottom bg-dark" id="footer">
-  <% if action_name == 'show' && controller_name == 'travels' %>
-    <%= link_to 'トラベル一覧', travels_path %>
+  <% if controller_name == 'travels' && action_name == 'index' %>
+    <%= link_to 'トラベル新規作成', new_travel_path %>
   <% else %>
-    <%= link_to 'トラベル詳細', travel_path(@associated_travel) %>
-  <% end %>
+    <% if controller_name == 'travels' && action_name == 'show' %>
+      <%= link_to 'トラベル一覧', travels_path %>
+    <% else %>
+      <%= link_to 'トラベル詳細', travel_path(@associated_travel) %>
+    <% end %>
 
-  <%= link_to 'メモ一覧', notes_path %>
-  <%= link_to 'リスト一覧', lists_path %>
+    <%= link_to 'メモ一覧', notes_path %>
+    <%= link_to 'リスト一覧', lists_path %>
+  <% end %>
 </footer>
