フッターにリンクを追加

--- a/app/views/layouts/_users_footer.html.erb
+++ b/app/views/layouts/_users_footer.html.erb
@@ -1,4 +1,5 @@
 <footer class="navbar fixed-bottom bg-dark" id="footer">
   <%= link_to 'トラベル一覧', travels_path %>
+  <%= link_to '作成したメモ一覧', personal_notes_path %>
   <%= link_to '作成したリスト一覧', personal_lists_path %>
 </footer>
