--- a/app/views/travels/_area_fields.html.erb
+++ b/app/views/travels/_area_fields.html.erb
@@ -1,5 +1,7 @@
 <div class="nested-fields">
   <%= f.text_field :country, placeholder: "country" %>
   <%= f.text_field :place, placeholder: "place" %>
+  <%= f.date_select :arrived_at %>
+  <%= f.date_select :left_at %>
   <%= link_to_remove_association 'DELERT AREA', f %>
 </div>
