--- a/app/views/users/landing.html.erb
+++ b/app/views/users/landing.html.erb
@@ -1,4 +1,4 @@
-<%= stylesheet_link_tag 'top', media: 'all', 'data-turbolinks-track': 'reload' %>
+<%= stylesheet_link_tag 'landing', media: 'all', 'data-turbolinks-track': 'reload' %>
 
 <div id="fullpage">
   <div class="section">
